--- a/src/app/components/wish-list/wish-list.component.scss
+++ b/src/app/components/wish-list/wish-list.component.scss
@@ -29,6 +29,19 @@
     border-radius: 0 0 3px 3px;
 
 }
+
+.no-wislist-main{
+    width: 100%;
+    height: 200px;
+    padding: 20px;
+    font-style: italic;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #E2E2E2;
+    border-radius: 0 0 3px 3px;
+
+}
 .wishlist-main-card{
     width: 100%;
     display: flex;
