--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,8 @@
 <div class="profile-main-ctn">
-
+    <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 48%;">
+        <p style="color: grey; cursor: pointer;" (click)="navigateHome()">Home/</p>
+        <p>Profile</p>
+    </div>
 
     <div class="profile-main-personalDetails">
         <div class="profile-main-personalDetails-heading">
