modfied login component

--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -37,7 +37,7 @@
 .text-cnt {
     top: 257px;
     left: 300px;
-    width: 300px;
+    width: 280px;
     height: 40px;
     text-align: center;
     font: normal normal normal 15px/20px Roboto;
@@ -61,15 +61,19 @@
     opacity: 1;
 }
 .space {
+    display: flex;
+    flex-direction: column;
+   align-items: center;
     padding: 30px 40px 30px 40px; /* top right bottom left */
 }
 
-.email {
- /* Layout Properties */
+
+.email{
+    /* Layout Properties */
 top: 314px;
 left: 559px;
-width: 36px;
-height: 13px;
+width: 234px;
+height: 2px;
 /* UI Properties */
 text-align: left;
 font: normal normal medium 10px/13px Roboto;
@@ -77,14 +81,8 @@ letter-spacing: 0px;
 color: #0A0102;
 text-transform: capitalize;
 opacity: 1;
+
 }
-
-
-
-
-
-
- 
 
 mat-form-field {
     width: 80%;
@@ -115,8 +113,36 @@ mat-form-field {
 .footerP{
     align-items: center;
 }
+ .btn{
+    padding: 40px 165px;
+    border: none;
+    
+    
+ }
  
- 
+.create-btn{
+    display: flex;
+    justify-content: center;
+    
+}
+.btn2{
+    padding: 10px 72px;
+    background-color: rgb(114, 6, 6);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-top: 5%;
+}
+
+.input{
+    width: 62%;
+    padding: 3%;
+    //height: 10%;
+}
+
+.full-cnt{
+    margin-bottom: 10%;
+}
 // .mybuttons {
 //     display: flex;
 //     align-items: center; /* Adjust this value to 'flex-start', 'flex-end', 'center', 'baseline', or 'stretch' */
