--- a/src/app/components/login-signup/login-signup.component.html
+++ b/src/app/components/login-signup/login-signup.component.html
@@ -1,5 +1,5 @@
 
-    <mat-dialog-content>
+    <!-- <mat-dialog-content> -->
         <div class="online-book-shopping">
             <div class="login-panel">
                 <div class="image-container">
@@ -25,11 +25,12 @@
                                     <label>Password</label>
                                     <mat-form-field appearance="outline">
                                         <input formControlName="password" matInput type="password">
-                                        
                                     </mat-form-field>
                                 </div>
 
-                                <button mat-raised-button (click)="userLogin()" class="login-btn">Login</button>
+                                <button mat-raised-button (click)="login()"  class="login-btn">Login</button>
+
+                                <button mat-button class="forgot-btn" (click)="forgotPassword()">Forgot Password?</button>
 
                                 <div class="or-separator">OR</div>
 
@@ -57,8 +58,6 @@
                                 <mat-form-field appearance="outline">
                                     <input formControlName="phone" matInput type="tel">
                                 </mat-form-field>
-
-
                                 <button style="width: 100%;background-color:#A03037;color:white; height: 40px;" mat-raised-button (click)="userRegister()">Sign
                                     Up</button>
                             </form>
@@ -67,4 +66,4 @@
                 </div>
             </div>
         </div>
-    </mat-dialog-content>
+    <!-- </mat-dialog-content> -->
