--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,15 +1,6 @@
 
-<div class="header-cnt">
-    <div class="allign-cnt">
-      <div class="img-cnt">
-        <img src="../../../assets/logo/logo.png" alt="" />
-        <span>Bookstore</span>
-      </div>
-    </div>
-  </div>
+<app-header></app-header>
   
-
-
 <div class="full-cnt">
     <div class="form-heading">
         <h1 class="title">Forgot Your Password?</h1>
@@ -22,18 +13,15 @@
                 <p>Enter your email address and we will send you a link to reset your password</p>
             </div>
             <br>
-            <div class="email">
-               <p>Email</p>
-            </div>
-            <div class="email-input">
-                <input type="text">
-            </div>
+            <label class="email">Email</label>
+            <br>
+            <input class="input" type="text">
             <div class="res-btn">
-                <button mat-button color="primary">Reset Password</button>
+               <button class="btn2" (click)="ResetPassword()">Reset Password</button>
             </div>
     </div>
     <div class="create-btn">
-        <button mat-button color="primary">Create Account</button>
+        <button class="btn" (click)="handleCreate()">Create Account</button>
     </div>
 </form>
 </div>
