--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -32,7 +32,7 @@
           <ng-template #quantityBtns>
             <div class="add-to-bag-quantity-btns">
               <button (click)="handleAddToCartBtn('decreament')">-</button>
-              <p>{{ quantity }}</p>
+              <p>{{ quantity || localQuantity }}</p>
 
               <button (click)="handleAddToCartBtn('increament')">+</button>
             </div>
@@ -142,9 +142,9 @@
             <div class="review-details" *ngIf="currentState == 'loggedIn'">
               <div class="user">
                 <div class="initials">
-                  {{ getInitials(feedback.user_id.fullName) }}
+                  {{ getInitials(feedback.user_id.fullName) || name }}
                 </div>
-                <div class="name">{{ feedback.user_id.fullName }}</div>
+                <div class="name">{{ feedback.user_id.fullName || name }}</div>
               </div>
               <div
                 class="user-rating"
