--- a/src/app/components/login-signup/login-signup.component.html
+++ b/src/app/components/login-signup/login-signup.component.html
@@ -4,7 +4,7 @@
             <div class="login-panel">
                 <div class="image-container">
                     <img
-                        src="https://public-v2links.adobecc.com/d096df37-ca37-4026-553f-8cfa6bec09ec/component?params=component_id%3A7b0eeb81-a918-4f41-9bc2-f508474e79ce&params=version%3A0&token=1724911623_da39a3ee_57b533d1398f7c361a80a598c70ee956ff7d393f&api_key=CometServer1">
+                        src="../../../assets/main-logo.png" height="200px" width="200px">
                     <br><br>
                     <p style="font-size:20px;"><b>ONLINE BOOK SHOPPING</b></p>
                 </div>
