--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -551,3 +551,29 @@ margin-bottom: 2%;
        
  
 }
+
+.card{
+  padding: 5%;
+  border-radius:5px ;
+  background-color: rgb(230, 230, 230);
+  margin: 20%;
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+
+.btncard{
+  padding: 10px 30px;
+  border: none;
+  background-color: #A03037;
+  border-radius: 5px;
+  color: white;
+}
+
+.btncard:hover{
+  color: white;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 30px;
+  background-color: #039011;
+}
