--- a/src/app/components/add-book/add-book.component.scss
+++ b/src/app/components/add-book/add-book.component.scss
@@ -1,67 +1,30 @@
-.header-cnt {
-    height: 60px;
-    width: 100%;
-    background-color: #A03037;
+.add-book-container {
     display: flex;
-    justify-content: space-between;
-}
- 
-.allign-cnt {
-    display: flex;
-    gap: 3%;
-    width: 50%;
-    align-items: center;
-    padding-left: 12%;
-}
- 
-.img-cnt {
-    display: flex;
-    align-items: center;
-    color: white;
-    font-size: 20px;
-    gap: 6px;
-}
- 
-/* New CSS */
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-}
- 
-.parentDiv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 60px); /* Adjusting for the header height */
-    background-color: #f5f5f5;
-    margin-top: 60px; /* Ensuring content starts below the header */
     flex-direction: column;
-}
+    align-items: center;
+    width: 90%;
+    max-width: 420px; 
+    padding: 30px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    border-radius: 8px;
+    margin: 30px auto;
+  }
  
-.wrapper {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-}
- 
-.form-heading {
-    text-align: center;
-    margin-bottom: 20px;
-}
- 
-.mat-form-field {
+  form {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    margin-bottom: 15px;
-}
+    max-width: 400px; 
+  }
  
-button {
+  .form-field {
+    width: 100%;
+    margin-bottom: 0px;
+  }
+ 
+  button {
     width: 100%;
     background-color: #A03037;
-    color: white;
-    height: 40px;
-}
+  }
  
