--- a/src/app/components/login-signup/login-signup.component.html
+++ b/src/app/components/login-signup/login-signup.component.html
@@ -1,10 +1,10 @@
 
-    <mat-dialog-content>
+    <!-- <mat-dialog-content> -->
         <div class="online-book-shopping">
             <div class="login-panel">
                 <div class="image-container">
                     <img
-                        src="https://public-v2links.adobecc.com/d096df37-ca37-4026-553f-8cfa6bec09ec/component?params=component_id%3A7b0eeb81-a918-4f41-9bc2-f508474e79ce&params=version%3A0&token=1724911623_da39a3ee_57b533d1398f7c361a80a598c70ee956ff7d393f&api_key=CometServer1">
+                        src="https://public-v2links.adobecc.com/d096df37-ca37-4026-553f-8cfa6bec09ec/component?params=component_id%3A634ba680-536e-4b6f-b4a3-41986b9b22f5&params=version%3A0&token=1725252112_da39a3ee_cbfaaf27934c1fc05b58f5eff8f6c098924f80c7&api_key=CometServer1">
                     <br><br>
                     <p style="font-size:20px;"><b>ONLINE BOOK SHOPPING</b></p>
                 </div>
@@ -29,7 +29,9 @@
                                     </mat-form-field>
                                 </div>
 
-                                <button mat-raised-button (click)="userLogin()" class="login-btn">Login</button>
+                                <button mat-raised-button (click)="login()" class="login-btn">Login</button>
+                                 
+                                <button mat-button class="forgot-btn" (click)="forgotPassword()">Forgot Password?</button>
 
                                 <div class="or-separator">OR</div>
 
@@ -67,4 +69,4 @@
                 </div>
             </div>
         </div>
-    </mat-dialog-content>
+    <!-- </mat-dialog-content> -->
