--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,22 +1,27 @@
-<div class="card2" *ngFor="let item of cartItems" >
 
-    <div class="img-head">
-    <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
-     
-    <div class="item-details">
-        
-        <h3>{{item.product_id.bookName}}</h3>
-        <p> {{item.product_id.author}}</p>
-        <strong>Rs. {{item.product_id.price}}</strong>
+<div class="div">
+<div (checkoutEvent)="checkout()" *ngIf="isLoggedIn; else notLoggedIn">
+  <div *ngIf="showCartList">
+    <div class="card2" *ngFor="let item of cartItems">
+      <div class="img-head">
+        <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
+        <div class="item-details">
+          <h3>{{item.product_id.bookName}}</h3>
+          <p>{{item.product_id.author}}</p>
+          <strong>Rs. {{item.product_id.price}}</strong>
+        </div>
+      </div>
+      <div class="order-status">
+        <strong>🟢Order Placed On May 21</strong>
+      </div>
     </div>
-</div>
-
-<div class="order-status">
-
-    <strong>🟢Order Placed On May 21</strong>
-
-</div>
   </div>
+</div>
+</div>
 
- 
-  
+<ng-template #notLoggedIn>
+  <div class="card">
+   
+    <button (click)="redirectToBooks()">Shop Now</button>
+  </div>
+</ng-template>
