--- a/src/app/components/order-list/order-list.component.scss
+++ b/src/app/components/order-list/order-list.component.scss
@@ -6,7 +6,7 @@
     margin-left: 10%;
     margin-right: 10%;
       
- margin-bottom: 1%;
+    margin-bottom: 1%;
     display: flex;
     flex-direction: row;
    justify-content: space-between;
@@ -64,4 +64,23 @@
     .img-head {
         gap: 10px;
     }
+}
+
+/* Ensure the main content area takes at least the full height of the viewport minus the footer height */
+.div{
+    min-height: calc(100vh - 100px); /* Adjust 100px to the actual height of your footer */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* Footer styles */
+footer {
+    height: 100px; /* Adjust to the actual height of your footer */
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
