--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
+<div class="dashboard-main">
+    <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer class="footer"></app-footer>
+
+</div>
