--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,24 +1,8 @@
-html, body {
-    height: 100%;
-    margin: 0;
-}
+// .dashboard-main{
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+// }
 
-.dashboard-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-}
-
-.content {
-    flex: 1;
-    min-height: calc(100vh - 100px);
-    background-color: aquamarine;
-    // padding: 20px; /* Optional: Add padding if needed */
-}
-.footer {
-    
-    // text-align: center;
-   
-    margin-top: 20px;
-}
