--- a/src/app/components/wish-list/wish-list.component.scss
+++ b/src/app/components/wish-list/wish-list.component.scss
@@ -2,9 +2,7 @@
     width: 80%;
     display: flex;
    flex-direction: column;
-   min-height: calc(100vh - 220px);
-
-  top: 10px;
+  
     
     margin: 50px auto;
     // padding: 20px;
@@ -40,8 +38,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    // border: 1px solid #E2E2E2;
-    // border-radius: 0 0 3px 3px;
+    border: 1px solid #E2E2E2;
+    border-radius: 0 0 3px 3px;
 
 }
 .wishlist-main-card{
@@ -88,29 +86,4 @@ font: normal normal normal 13px Roboto;
 letter-spacing: 0px;
 color: #878787;
 
-}
-
-.login-signup{
-    width: 127px;
-height: 33px;
-text-align: left;
-font: normal normal normal 12px/16px Roboto;
-letter-spacing: 0px;
-color: #A03037;
-border: 1px solid #A03037;
-border-radius: 2px;
-opacity: 1;
-align-content: center;
-display: flex;
-align-items: center;
-justify-content: center;
-cursor: pointer;
-}
-
-.please-login-in{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
 }
