path function added

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -1,6 +1,6 @@
 <div class="book-details-outer-cnt">
   <div class="book-details-routes">
-    <button style="border: none; background-color: white;" >Home / </button> <span style="font-weight: bold">Book(0)</span>
+    <button style="border: none; background-color: white;" (click)="handleHomeBtn()">Home / </button> <span style="font-weight: bold">Book({{selectedIndex}})</span>
   </div>
 
   <div class="book-details-inner-cnt">
