--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,7 +60,7 @@
               class="header-mat-menu-inner-cnt"
               style="display: flex; flex-direction: column; padding: 0px 20px"
             >
-              <p style="font-weight: bold">Hello {{name}},</p>
+              <p style="font-weight: bold">Hello Alexa,</p>
               <button
                 class="menu-button-item"
                 (click)="handleHeaderMenuClick('profile')"
