--- a/src/app/components/book-details/book-details.component.scss
+++ b/src/app/components/book-details/book-details.component.scss
@@ -6,6 +6,7 @@
     padding-top: 20px;
     display: flex;
     flex-direction: column;
+    min-height: calc(100vh - 120px);
     // gap: 2rem;
 }
 
