--- a/src/app/components/wish-list/wish-list.component.html
+++ b/src/app/components/wish-list/wish-list.component.html
@@ -3,16 +3,16 @@
         <p style="color: grey; cursor: pointer;" (click)="navigateHome()">Home/</p>
         <p>Profile</p>
     </div>
-
-    <div class="wishlist-main-header">
+ 
+    <div class="wishlist-main-header" *ngIf="showHeader==true">
         <h2>My Wishlist ({{wishCardLists.length}})</h2>
     </div>
-
-    <div class="wishlist-submain" *ngFor="let wishData of wishCardLists">
+ 
+    <div class="wishlist-submain" *ngFor="let wishData of wishCardLists" >
         <div class="wishlist-main-card" >
             <div class="wishlist-main-img">
                 <img src="../../../assets/think-book.png" alt="" height="90px" width="70px">
-        
+       
             </div>
             <div class="wishlist-main-content" >
                
@@ -22,16 +22,26 @@
                     <span class="wishlist-main-content-price-main">Rs. {{wishData.product_id.discountPrice}}</span>
                     <span class="wishlist-main-content-price-original">Rs. {{wishData.product_id.price}}</span>
                 </div>
-              
+             
             </div>
         </div>
         <img src="../../../assets/icons/delete.png" alt="" height="20px" width="20px" (click)="handleDeleteIcon(wishData.product_id._id)" style="cursor: pointer;">
     </div>
-
-
-
+ 
+ 
+ 
     <div class="no-wislist-main" *ngIf="showDiv==true">
        <h1> No items in the wishList </h1>
     </div>
+ 
+    <div class="please-login-in" *ngIf="showLogin==true" (click)="login()">
+        <h1>PLEASE LOG IN</h1>
+        <p>Login to view in your wishlist</p>
+        <img src="../../../assets/icons/Page-1.png" alt="" >
+        <div class="login-signup">
+            LOGIN/SIGNUP
+        </div>
+    </div>
 </div>
-
+ 
+ 
