--- a/src/app/components/wish-list/wish-list.component.scss
+++ b/src/app/components/wish-list/wish-list.component.scss
@@ -2,12 +2,14 @@
     width: 80%;
     display: flex;
    flex-direction: column;
-  
-    
+   min-height: calc(100vh - 200px);
+ 
+  top: 10px;
+   
     margin: 50px auto;
     // padding: 20px;
 }
-
+ 
 .wishlist-main-header{
     width: 100%;
     background: #F5F5F5 0% 0% no-repeat padding-box;
@@ -18,7 +20,7 @@
         margin: 0px;
     }
 }
-
+ 
 .wishlist-submain{
     width: 100%;
     display: flex;
@@ -27,9 +29,9 @@
     padding: 20px;
     border: 1px solid #E2E2E2;
     border-radius: 0 0 3px 3px;
-
+ 
 }
-
+ 
 .no-wislist-main{
     width: 100%;
     height: 200px;
@@ -38,9 +40,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #E2E2E2;
-    border-radius: 0 0 3px 3px;
-
+    // border: 1px solid #E2E2E2;
+    // border-radius: 0 0 3px 3px;
+ 
 }
 .wishlist-main-card{
     width: 100%;
@@ -52,7 +54,7 @@
     flex-direction: column;
     margin-left: 40px;
 }
-
+ 
 .wishlist-main-content-heading{
     text-align: left;
    font: normal normal normal 19px Roboto;
@@ -66,24 +68,49 @@
     letter-spacing: 0px;
    color: #878787;
    }
-
+ 
 .wishlist-main-content-price{
     display: flex;
     align-items: center;
-    
+   
     gap: 7px;
 }
-
+ 
 .wishlist-main-content-price-main{
     font: normal normal bold 16px Roboto;
 letter-spacing: 0px;
 color: #0A0102;
 }
-
+ 
 .wishlist-main-content-price-original{
 text-decoration: line-through;
 font: normal normal normal 13px Roboto;
 letter-spacing: 0px;
 color: #878787;
-
+ 
+}
+ 
+.login-signup{
+    width: 127px;
+height: 33px;
+text-align: left;
+font: normal normal normal 12px/16px Roboto;
+letter-spacing: 0px;
+color: #A03037;
+border: 1px solid #A03037;
+border-radius: 2px;
+opacity: 1;
+align-content: center;
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+}
+ 
+.please-login-in{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
