Fully Developed and designed Order list

--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -36,7 +36,7 @@
           <input  readonly class="input" type="text" value="{{item.product_id.quantity}}" >
           <button (click)="onIncrement()" class="btn">+</button>
         </div>
-        <strong (click)="removeCartItem(item._id)">Remove</strong>
+        <strong >Remove</strong>
           </div>
         
       </div>
@@ -168,7 +168,7 @@
     <div class="cart-footer2">
        
  
-      <button  class="Order" (click)="onCheckout()">Checkout</button>
+      <button  class="Order" >Checkout</button>
     </div>
    </div>
   
