modified login UI and forgot-Pass UI

--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -1,37 +1,20 @@
-.header-cnt {
-    height: 60px;
-    width: 100%;
-    background-color: #A03037;
-    display: flex;
-    justify-content: space-between;
-}
-.allign-cnt{
-    display: flex;
-    gap: 3%;
-    width: 50%;
-    align-items: center;
-    padding-left: 12%;
-}
-.img-cnt {
-    display: flex;
-    align-items: center;
-    color: white;
-    font-size: 20px;
-    gap: 6px;
-}
+
+
 .wrapper {
-    position: absolute;
-    top: 221px;
-    left: 492px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 424px;
     height: 287px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+    background: #FFFFFF;
     border: 1px solid #E4E4E4;
     border-radius: 6px;
-    opacity: 1;
+    margin: 0 auto;
+    
 }
 .title {
-    color: #0A0102;
+    color: #A03037;
 }
 
 .text-cnt {
@@ -48,9 +31,7 @@
 
 
 .form-heading {
-    position: absolute;
-    top: 161px;
-    left: 577px;
+    
     width: 260px;
     height: 33px;
     text-align: left;
@@ -59,6 +40,7 @@
     color: #0A0102;
     text-transform: capitalize;
     opacity: 1;
+
 }
 .space {
     display: flex;
@@ -114,8 +96,9 @@ mat-form-field {
     align-items: center;
 }
  .btn{
-    padding: 40px 165px;
+    padding: 40px 167px;
     border: none;
+    width: 100%;
     
     
  }
@@ -123,6 +106,7 @@ mat-form-field {
 .create-btn{
     display: flex;
     justify-content: center;
+
     
 }
 .btn2{
@@ -140,53 +124,22 @@ mat-form-field {
     //height: 10%;
 }
 
-.full-cnt{
-    margin-bottom: 10%;
+.full-cnt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 20px;
+    gap: 20px;
 }
-// .mybuttons {
-//     display: flex;
-//     align-items: center; /* Adjust this value to 'flex-start', 'flex-end', 'center', 'baseline', or 'stretch' */
-//     justify-content: space-between; /* Creates equal space between your items */
-// }
-/* For devices with a max width of 768px (tablets) */
-// @media (max-width: 768px) {
-//     .wrapper {
-//         margin-left: auto;
-//         margin-right: auto;
-//         margin-top: 50px;
-//         padding: 40px;
-//     }
-//     .footerP {
-//         margin-left: 0;
-//         text-align: center;
-//     }
-//     .buttons-group {
-//         margin-right: 0;
-//         justify-content: center;
-//     }
-// }
- 
-// /* For devices with a max width of 480px (mobile phones) */
-// @media (max-width: 480px) {
-//     .wrapper {
-//         width: 90%;
-//         padding: 20px;
-//         margin-top: 30px;
-//     }
-//     .form-heading h1, .form-heading h2 {
-//         font-size: 1.2em;
-//     }
-//     .footerP {
-//         margin-left: 0;
-//         text-align: center;
-//     }
-//     .buttons-group {
-//         flex-direction: column;
-//         gap: 5px;
-//         margin-right: 0;
-//     }
-//     .mybuttons {
-//         flex-direction: column;
-//         gap: 10px;
-//     }
-// }
+
+
+@media(max-width:768px){
+    .btn2{
+        margin-top:5px
+    }
+    
+}
+
