--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -65,7 +65,7 @@
                 class="menu-button-item"
                 (click)="handleHeaderMenuClick('profile')"
               >
-                <mat-icon svgIcon="profile">Profile</mat-icon> 
+                <mat-icon svgIcon="profile">Profile</mat-icon> Profile
               </button>
               <button
                 class="menu-button-item"
