--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -78,6 +78,57 @@
             <h1>Address Details</h1>
             <div class="profile-main-customerAdd-header-sub" (click)="add_new_add()">Add New Address</div>
         </div>
+
+         <!-- form st 1 -->
+ 
+         <div class="profile-main-address-Details" *ngIf="firstForm==true " >
+         
+          <div class="profile-main-address-Details-Subheader">
+              <h2>1. {{customerAddType}}</h2>
+              <!-- <p style="color: #A03037; cursor: pointer;" (click)="CDenableEditing()" >Edit</p> -->
+          </div>
+          <div class="profile-main-address-Details-main">
+              <p >Address</p>
+              <input type="text" placeholder="Full Address" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
+          </div>
+          <div class="profile-main-address-Details-sub">
+              <div class="profile-main-address-Details-sub2">
+                  <p>City/town</p>
+                  <input type="text" placeholder="City" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
+              </div>
+              <div class="profile-main-address-Details-sub2">
+                  <p>State</p>
+                  <input type="text" placeholder="State" [disabled]="CDisDisabled" [(ngModel)]="customerState">
+              </div>
+ 
+          </div>
+          <div class="profile-main-address-Details-worktype">
+              <p>Type</p>
+             <div class="profile-main-address-Details-worktype-radio">
+             <div>
+              <input type="radio" id="home" name="location" value="Home" [(ngModel)]="customerAddType">
+              <label for="home">Home</label>
+             </div>
+             
+            <div>  
+              <input type="radio" id="work" name="location" value="Office" [(ngModel)]="customerAddType">
+              <label for="work">Work</label>
+            </div>
+             
+              <div>
+                  <input type="radio" id="other" name="location" value="Other" [(ngModel)]="customerAddType">
+              <label for="other">Other</label>
+              </div>
+             </div>
+          </div>
+ 
+          <!-- <button *ngIf="!CDisDisabled" (click)="saveAddress()">Save</button> -->
+          <button (click)="saveNewForm()">Save</button>
+ 
+ 
+      </div>
+
+      <!-- end form -->
         <div class="profile-main-customerAdd-span" *ngFor="let addressData of customerDetails">
    
             <div *ngIf="shouldShowFirstDiv(addressData)" >
@@ -88,6 +139,8 @@
                 <h3 style="margin: 0;">Address</h3>
                <span>{{addressData.fullAddress}} , {{addressData.city}}, {{addressData.state}} </span>
             </div>
+
+            <!-- form st -->
  
             <div class="profile-main-address-Details" *ngIf="!shouldShowFirstDiv(addressData)" >
                 <div class="profile-main-address-Details-header">
@@ -138,6 +191,8 @@
        
        
             </div>
+
+            <!-- end form -->
            
            
        </div>
@@ -195,7 +250,7 @@
     <div class="cart-footer2">
        
  
-      <button  class="Order" (click)="orderPlaced()">Checkout</button>
+      <button (click)="onCheckout()"  class="Order" >Checkout</button>
     </div>
    </div>
    <div class="card2" *ngIf="isCard2Visible">
@@ -210,6 +265,8 @@
  
 </div>
 <div *ngIf="isCardVisible" class="card">
+
+  <img width="200px" src="../../../assets/pngtree-happy-kid-thumb-up-png-image_6452205.png" alt="">
   <button (click)="redirectToBooks()" class="btncard">Shop Now To View Cart</button>
 </div>
 
