--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,5 +1,9 @@
 
 <div class="div">
+  <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 60%;">
+    <p style="color: grey; cursor: pointer;" (click)="navigateHome()">Home/</p>
+    <p>OrderList</p>
+</div>
 <div >
   <div >
     <div class="card2" *ngFor="let item of cartItems">
