--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -1,4 +1,9 @@
 <div  class="cart">
+
+  <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 60%;">
+    <p style="color: grey; cursor: pointer;" (click)="navigateHome()">Home/</p>
+    <p>CartList</p>
+</div>
  <div *ngIf="!isCardVisible" class="carts">
 
  
