--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -1,6 +1,6 @@
 <div  class="cart">
 
-  <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 60%;">
+  <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 60%; margin-top: 30px;">
     <p style="color: grey; cursor: pointer;" (click)="navigateHome()">Home/</p>
     <p>CartList</p>
 </div>
