--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,11 +1,11 @@
 
 <div class="div">
-  <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 60%;">
+  <div class="profile-main-ctn-router" style="display: flex; justify-content: flex-start; width: 60%; margin: 30px 0 0 30px ;">
     <p style="color: grey; cursor: pointer;" (click)="navigateHome()">Home/</p>
     <p>OrderList</p>
 </div>
-<div >
-  <div >
+
+  <div class="main-card">
     <div class="card2" *ngFor="let item of cartItems">
       <div class="img-head">
         <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
@@ -19,7 +19,7 @@
         <strong>🟢Order Placed On May 21</strong>
       </div>
     </div>
-  </div>
+ 
 </div>
 </div>
 
