--- a/src/app/components/order-list/order-list.component.scss
+++ b/src/app/components/order-list/order-list.component.scss
@@ -1,12 +1,15 @@
+.main-card{
+
+}
+
+
 .card2{
     border: 2px solid rgba(176, 174, 174, 0.338);
     padding: 3%;
    
-    margin-top: 3%;
+    margin-top: 2%;
     margin-left: 10%;
     margin-right: 10%;
-      
-    margin-bottom: 1%;
     display: flex;
     flex-direction: row;
    justify-content: space-between;
@@ -68,10 +71,11 @@
 
 /* Ensure the main content area takes at least the full height of the viewport minus the footer height */
 .div{
-    min-height: calc(100vh - 120px); /* Adjust 100px to the actual height of your footer */
+    min-height: calc(100vh - 120px); 
+    top: 10px;/* Adjust 100px to the actual height of your footer */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
 }
 
 /* Footer styles */
